# QPocket-Android

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/doc/: sqllite
app/src/main/: AndroidManifest.xml
app/src/main/proto/api/: api.proto
app/src/main/proto/core/: Contract.proto  Tron.proto
app/src/main/res/anim/: batch_popin.xml  batch_popup.xml
app/src/main/res/color/: img_text_selector.xml  item_wheel_selector.xml  main_btn_selector.xml  text_w_b_selector.xml
app/src/main/res/drawable/: address_book_icon_bg.xml  bg_item_wheel_selector.xml  bg_qr_code.xml  bg_toast.xml  btn_black_bg.xml  btn_gray_bg.xml  btn_normal2_bg.xml  btn_white_bg.xml  button_back_selector.xml  button_selector.xml  check_box_green_selector.xml  circle_bg.xml  circle_bitmap.xml  create_wallet_language_bg.xml  edit_batch_pro_check.xml  edit_text_bg.xml  flow_layout_black_bg.xml  flow_layout_gray_bg.xml  holder_black_circle_bitmap.xml  holder_hollow_black_circle_bitmap.xml  ic_background.xml  main_btn_black_bg.xml  main_setting_selector.xml  main_wallet_selector.xml  phrase_edit_text_bg.xml  pop_btn_gray_bg.xml  pop_button_back_selector.xml  progress_anim.xml  progress_background.xml  progress_gray_anim.xml  reload_black_bg.xml  setting_state_bg.xml  splash_bg_black.xml  text_hint_round_bg.xml  text_title_round_bg.xml  token_coin_icon_bg.xml  token_search_edit_bg.xml  token_search_edit_bg2.xml  top_bar_bg.xml  trx_selected_img.xml  (+5 more)
app/src/main/res/layout/: activity_add_token_layout.xml  (+87 more)
(+517 files in other folders)
